feat: add api for create user
