# internal/router_impl.go
@@ -40,6 +40,7 @@ func (r *router) AuthRoute(handler handler.AuthHandler) {
 func (r *router) UserRoute(handler handler.UserHandler) {
 	user := r.app.Group("user")
 	user.Get("", middleware.Auth(true), middleware.Role(sql.RoleAdmin, true), handler.GetAllUser)
+	user.Post("", middleware.Auth(false), middleware.Role(sql.RoleAdmin, false), handler.CreateUser)
 	user.Get("dropdown", middleware.Auth(true), middleware.Role(sql.RoleAdmin, true), handler.AllDropdownUser)
 	user.Get(":id", middleware.Auth(false), middleware.Role(sql.RoleAdmin, false), handler.GetUserById)
 	user.Delete(":id", middleware.Auth(false), middleware.Role(sql.RoleAdmin, false), handler.ToggleDeleteUser)
